@@ -9,6 +9,12 @@ New in 6.0 version:
     filtering (Stefano de Gironcoli)
   * Support for new, improved Goedecker-Hutter-Teter pseudopotentials
     generated by Santana Saha (Sebastiano Caravati)
+  * EPW: Automatic documentation using Ford
+  * EPW: Restart after epmatwp1 is written with arbitrary number of cores
+  * EPW: Electron and Phonon bandstructure can now be computed using band_plot
+         with etf_mem true or false.
+  * EPW: The test-farm now checks 5 representative examples and the associated
+         accuracy
 
 Fixed in 6.0 version:
 
@@ -28,6 +34,11 @@ Fixed in 6.0 version:
   * PHonon: support for Goedecker-Hutter-Teter pseudopotentials was missing
     (courtesy of Sebastiano Caravati)
   * turboTDDFPT: Problem if empty states were also computed. 
+  * NEB did not recognize its own input if white spaces were present at the
+    right of NEB cards (commit 12816)
+  * EPW: Correct Wannier localization with spinors
+  * EPW: Electronic velocities in the local approximation now works correctly
+    with skipped bands and spin-orbit coupling
 
 Incompatible changes in 6.0 version:
 
